--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  {%- if site.meta_description != null -%}
+    <meta name="description" content={{ site.meta_description }}>
+  {%- endif -%}
 
   <title>{{ site.name }} | {{ site.title }}</title>
   {%- seo title=false -%}
