--- a/_includes/section-list.html
+++ b/_includes/section-list.html
@@ -1,7 +1,7 @@
 {% for item in include.content %}
   <div class="row clearfix layout layout-{{item.layout | default: 'left'}} border-{{item.border | default: 'no'}}">
     <div class="col-xs-12 col-sm-4 col-md-3 col-print-12 details">
-      <h6 id="{{ item.title | slugify }}">{{ item.title }}</h6>
+      <h4 id="{{ item.title | slugify }}">{{ item.title }}</h4>
       {%- if item.sub_title -%}<p><b>{{ item.sub_title }}</b></p>{%- endif -%}
       {%- if item.caption -%}<p>{{ item.caption }}</p>{%- endif -%}
 
@@ -14,6 +14,7 @@
       <p class="no-print aditional-links">
         {% for link in item.additional_links %}
           {% include a.html href=link.url class="" %}
+            <h5>{{ link.title }}</h5>
             <i class="{{ link.icon }}" title="{{ link.title | escape }}"></i>
           </a>
         {% endfor %}
