--- a/_includes/section-list.html
+++ b/_includes/section-list.html
@@ -14,8 +14,7 @@
       <p class="no-print aditional-links">
         {% for link in item.additional_links %}
           {% include a.html href=link.url class="" %}
-            <h5>{{ link.title }}</h5>
-            <i class="{{ link.icon }}" title="{{ link.title | escape }}"></i>
+            {{ link.title | strip | markdownify }} <i class="{{ link.icon }}" title="{{ link.title | escape }}"></i>
           </a>
         {% endfor %}
       </p>
