--- a/_includes/section-list.html
+++ b/_includes/section-list.html
@@ -1,29 +1,33 @@
-{% for item in include.content %}
-  <div class="row clearfix layout layout-{{item.layout | default: 'left'}} border-{{item.border | default: 'no'}}">
-    <div class="col-xs-12 col-sm-4 col-md-3 col-print-12 details">
-      <h4 id="{{ item.title | slugify }}">{{ item.title }}</h4>
-      {%- if item.sub_title -%}<p><b>{{ item.sub_title }}</b></p>{%- endif -%}
-      {%- if item.caption -%}<p>{{ item.caption }}</p>{%- endif -%}
+<div class="row">
+  {% for item in include.content %}
+    <div class="col-xs-12 col-sm-4 col-md-3 col-print-12">
+      <div class="row clearfix layout layout-{{item.layout | default: 'left'}} border-{{item.border | default: 'no'}}">
+        <div class="details">
+          <h4 id="{{ item.title | slugify }}">{{ item.title }}</h4>
+          {%- if item.sub_title -%}<p><b>{{ item.sub_title }}</b></p>{%- endif -%}
+          {%- if item.caption -%}<p>{{ item.caption }}</p>{%- endif -%}
 
-      {%- if item.link -%}
-        {% include a.html href=item.link class="link" %}
-          {%- if item.link_text -%}{{ item.link_text }}{%- else -%}{{ item.link }}{%- endif -%}
-        </a>
-      {%- endif -%}
+          {%- if item.link -%}
+            {% include a.html href=item.link class="link" %}
+              {%- if item.link_text -%}{{ item.link_text }}{%- else -%}{{ item.link }}{%- endif -%}
+            </a>
+          {%- endif -%}
 
-      <p class="no-print aditional-links">
-        {% for link in item.additional_links %}
-          {% include a.html href=link.url class="" %}
-            <i class="{{ link.icon }}" title="{{ link.title | escape }}"> {{ link.title | escape }}</i>
-          </a>
-        {% endfor %}
-      </p>
+          <p class="no-print aditional-links">
+            {% for link in item.additional_links %}
+              {% include a.html href=link.url class="" %}
+                <i class="{{ link.icon }}" title="{{ link.title | escape }}"> {{ link.title | escape }}</i>
+              </a>
+            {% endfor %}
+          </p>
+        </div>
+        <div class="content">
+          {%- if item.quote -%}
+            <p>{{ item.quote }}</p>
+          {%- endif -%}
+          {{ item.description | strip | markdownify }}
+        </div>
+      </div>
     </div>
-    <div class="col-xs-12 col-sm-8 col-md-9 col-print-12 content">
-      {%- if item.quote -%}
-        <p>{{ item.quote }}</p>
-      {%- endif -%}
-      {{ item.description | strip | markdownify }}
-    </div>
-  </div>
-{% endfor %}
+  {% endfor %}
+</div>
