--- a/_includes/section-list.html
+++ b/_includes/section-list.html
@@ -16,7 +16,7 @@
           <p class="no-print aditional-links">
             {% for link in item.additional_links %}
               {% include a.html href=link.url class="" %}
-                <i class="{{ link.icon }}" title="{{ link.title | escape }}"> {{ link.title | escape }}</i>
+                <i class="{{ link.icon }}" title="{{ link.title | escape }}" style="font-size: 0.8em;"> {{ link.title | escape }}</i>
               </a>
             {% endfor %}
           </p>
