--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <meta name="description" content="{{ site.meta_description }}">
 
   <title>{{ site.name }} | {{ site.title }}</title>
-  {%- seo title=false -%}
+  {%- seo title=false description=false -%}
 
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | default: '/assets/favicon.ico' | relative_url }}">
