--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,36 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.meta_description }}">
+  <meta name="author" content="{{ site.name }}">
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="{{ meta_keyword1 }}, {{ meta_keyword2 }}, {{ meta_keyword3 }}">
+  
+  <meta property="og:title" content="{{ site.name }}" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:description" content="{{ site.meta_description }}" />
+  <meta property="og:url" content="https://{{ meta_url }}/" />
+  <meta property="og:site_name" content="{{ site.title }}" />
+  <meta property="og:type" content="website" />
+
+  <link rel="canonical" href="https://{{ meta_url }}/"/>
+
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Person",
+    "name": "{{ site.name }}",
+    "url": "https://{{ meta_url }}/",
+    "image": "{{ meta_img }}",
+    "sameAs": [
+      "https://orcid.org/{{ site.orcid_username | escape }}",
+      "https://github.com/{{ site.github_username| cgi_escape | escape }}"
+    ],
+    "jobTitle": "{{ site.title }}",
+  }
+  </script>
 
   <title>{{ site.name }} | {{ site.title }}</title>
   
