--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,23 +6,23 @@
   <meta name="description" content="{{ site.meta_description }}">
   <meta name="author" content="{{ site.name }}">
   <meta name="robots" content="index, follow">
-  <meta name="keywords" content="{{ meta_keyword1 }}, {{ meta_keyword2 }}, {{ meta_keyword3 }}">
+  <meta name="keywords" content="{{ site.meta_keyword1 }}, {{ site.meta_keyword2 }}, {{ site.meta_keyword3 }}">
   
   <meta property="og:title" content="{{ site.name }}" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:description" content="{{ site.meta_description }}" />
-  <meta property="og:url" content="https://{{ meta_url }}/" />
+  <meta property="og:url" content="https://{{ site.meta_url }}/" />
   <meta property="og:site_name" content="{{ site.title }}" />
   <meta property="og:type" content="website" />
 
-  <link rel="canonical" href="https://{{ meta_url }}/"/>
+  <link rel="canonical" href="https://{{ site.meta_url }}/"/>
 
   <script type="application/ld+json">
   {
     "@context": "http://schema.org",
     "@type": "Person",
     "name": "{{ site.name }}",
-    "url": "https://{{ meta_url }}/",
+    "url": "https://{{ site.meta_url }}/",
     "image": "url({{ site.about_profile_image | relative_url }})",
     "sameAs": [
       "https://orcid.org/{{ site.orcid_username | escape }}",
