--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,7 @@
       "https://orcid.org/{{ site.orcid_username | escape }}",
       "https://github.com/{{ site.github_username| cgi_escape | escape }}"
     ],
-    "jobTitle": "{{ site.title }}",
+    "jobTitle": "{{ site.title }}"
   }
   </script>
 
