--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,14 @@
   <meta property="og:url" content="https://{{ site.meta_url }}/" />
   <meta property="og:site_name" content="{{ site.title }}" />
   <meta property="og:type" content="website" />
+  <meta property="og:image" content="{{ site.meta_img }}" />
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="{{ site.meta_url }}">
+  <meta property="twitter:url" content="https://{{ site.meta_url }}/">
+  <meta name="twitter:title" content="{{ site.name }}">
+  <meta name="twitter:description" content="{{ site.meta_description }}">
+  <meta name="twitter:image" content="{{ site.meta_img }}">
 
   <link rel="canonical" href="https://{{ site.meta_url }}/"/>
 
