--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,8 @@
 <div class="container header-container">
   <div class="row">
+    <div class="col-xs-12 col-sm-4 col-md-3 header-left">
+      <span class="profile-img" style="background-image: url({{ site.about_profile_image | relative_url }})"></span>
+    </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
       <h1>{{ site.name | escape }}</h1>
       <h2>{{ site.title | escape }}</h2>
