--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,15 +6,15 @@
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
       <h1>{{ site.name | escape }}</h1>
       <h2>{{ site.title | escape }}</h2>
-      <h2>{{ site.sub1 | escape }}</h2>
-      <h2>{{ site.sub2 | escape }}</h2>
+      <h3>{{ site.sub1 | escape }}</h3>
+      <h3>{{ site.sub2 | escape }}</h3>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
       <ul class="icons no-print">
         {%- if site.email -%}
           <li>
             <a target="_blank" href="mailto:{{ site.email }}" class="button button--sacnite button--round-l">
-              <i class="fas fa-envelope" title="Email"></i>
+              <i class="fas fa-solid fa-envelope" title="Email"></i>
             </a>
           </li>
         {%- endif -%}
@@ -35,7 +35,7 @@
         {%- if site.github_username -%}
           <li>
             <a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
-              <i class="fab fa-github" title="GitHub"></i>
+              <i class="fas fa-solid fa-code-merge" title="GitHub"></i>
             </a>
           </li>
         {%- endif -%}
