--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,13 @@
   <title>{{ site.name }} | {{ site.title }}</title>
 
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
-  <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | default: '/assets/favicon.ico' | relative_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ /apple-touch-icon.png | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ /favicon-32x32.png | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ /favicon-16x16.png | relative_url }}">
+  <link rel="manifest" href="{{ /site.webmanifest | relative_url }}">
+  <link rel="mask-icon" href="{{ /safari-pinned-tab.svg | relative_url }}" color="#000000">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="theme-color" content="#ffffff">
 
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
