--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -188,4 +188,16 @@ p.quote {
     padding: 0rem 1rem;
     margin-top: 1rem;
   }
+  
+.pub-img {
+  margin-top: 20px;
+  margin-bottom: 5px;
+  width: 100%;
+  height: 300px;
+  display: block;
+  border-radius: 12px;
+  background-size: 100% 100%;
+  -webkit-background-size: 100% 100%; /*  Safari  */
+  -khtml-background-size: 100% 100%; /*  Konqueror  */
+  -moz-background-size: 100% 100%; /*  Firefox  */
 }
