--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -1,3 +1,4 @@
+<div class="container projects-container">
 {% for item in include.content %}
   <div class="row clearfix item">
     <div class="col-xs-12 col-sm-5 col-md-6 no-print">
@@ -11,3 +12,4 @@
     </div>
   </div>
 {% endfor %}
+</div>
