--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -1,15 +1,12 @@
-<div class="container projects-container">
-{% for item in include.content %}
-  <div class="row clearfix item">
-    <div class="col-xs-12 col-sm-5 col-md-6 no-print">
-      <span class="pub-img" style="background-image: url({{ item.image | relative_url }})" />
-      </div>
-    <div class="col-xs-12 col-sm-7 col-md-6 col-print-12">
-      {%- if item.quote -%}
-        <p class="quote">{{ item.quote }}</p>
-      {%- endif -%}
-      {{ item.description | strip | markdownify }}
+<div class="row clearfix item">
+  <div class="col-xs-12 col-sm-5 col-md-6 no-print">
+    <span class="pub-img" style="background-image: url({{ include.content.image | relative_url }})" />
     </div>
+  <div class="col-xs-12 col-sm-7 col-md-6 col-print-12">
+    {%- if include.content.quote -%}
+      <p class="quote">{{ item.quote }}</p>
+    {%- endif -%}
+    {{ include.content.description | strip | markdownify }}
   </div>
-{% endfor %}
 </div>
+
