--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -1,5 +1,5 @@
 <div class="container projects-container">
-  {% for project in site.data.projects %}
+  {% for project in include.content %}
     <div class="row clearfix project">
       <div class="col-xs-12 col-sm-5 col-md-6 no-print">
         <span class="pub-img" style="background-image: url({{ project.image | relative_url }})"/>
