--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -1,12 +1,13 @@
-{% for project in include.content %}
-    <div class="col-xs-12 col-sm-5 col-md-6 no-print">
-      <span class="pub-img" style="background-image: url({{ project.image | relative_url }})"/>
+{% for project in site.data.projects %}
+    <div class="row clearfix project">
+      <div class="col-xs-12 col-sm-5 col-md-6 no-print">
+        <span class="pub-img" style="background-image: url({{ project.image | relative_url }})"/>
+        </div>
+      <div class="col-xs-12 col-sm-7 col-md-6 col-print-12">
+        {%- if project.quote -%}
+          <p class="quote">{{ project.quote }}</p>
+        {%- endif -%}
+        {{ project.description | strip | markdownify }}
       </div>
-    <div class="col-xs-12 col-sm-7 col-md-6 col-print-12">
-      {%- if project.quote -%}
-        <p class="quote">{{ project.quote }}</p>
-      {%- endif -%}
-      {{ project.description | strip | markdownify }}
     </div>
 {% endfor %}
-
