--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -190,11 +190,14 @@ p.quote {
   }
 }
 .pub-img {
-  margin: 0 auto;
+  margin-top: 20px;
   margin-bottom: 5px;
   width: 100%;
   height: 300px;
   display: block;
   border-radius: 12px;
   background-size: 100% 100%;
+  -webkit-background-size: 100% 100%; /*  Safari  */
+  -khtml-background-size: 100% 100%; /*  Konqueror  */
+  -moz-background-size: 100% 100%; /*  Firefox  */
 }
