--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -8,6 +8,10 @@
           <p class="quote">{{ project.quote }}</p>
         {%- endif -%}
         {{ project.description | strip | markdownify }}
+        {%- if project.icon and project.icon_title -%}
+          <br>
+          <i class="{{ project.icon }}" title="{{ project.icon_title| escape }}" style="font-size: 0.75em;"> {{ project.icon_title | escape }}</i>
+        {%- endif -%}
       </div>
     </div>
 {% endfor %}
