--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -4,15 +4,8 @@
         <span class="pub-img" style="background-image: url({{ project.image | relative_url }})"/>
         </div>
       <div class="col-xs-12 col-sm-7 col-md-6 col-print-12">
-        {%- if project.quote -%}
-          <p class="quote">{{ project.quote }}</p>
-        {%- endif -%}
+        {% include a.html href=project.icon_url class="" %} <i class="{{ project.icon }}" title="{{ project.icon_title| escape }}"></i> </a>
         {{ project.description | strip | markdownify }}
-        {%- if project.icon and project.icon_url -%}
-          {% include a.html href=project.icon_url class="" %}
-                <i class="{{ project.icon }}" title="{{ project.icon_title| escape }}"></i>
-              </a>
-        {%- endif -%}
       </div>
     </div>
 {% endfor %}
