--- a/_includes/section-paper.html
+++ b/_includes/section-paper.html
@@ -1,10 +1,10 @@
 {% for item in include.content %}
   <div class="row clearfix layout layout-left">
     <div class="col-xs-12 col-print-20 details">
-      <font size="3"><b>{{ include.item.first_author | strip | escape }}</b> {{ include.item.author_list | strip | escape }} <i>{{ include.item.title | strip | escape }}</i> {{ include.item.journal | strip | escape }} 
+      <font size="3"><b>{{ item.first_author | strip | escape }}</b> {{ item.author_list | strip | escape }} <i>{{ item.title | strip | escape }}</i> {{ item.journal | strip | escape }} 
       </font>  
-      {%- if include.item.link -%}
-      <a href="{{ include.item.link }}" target="_blank">
+      {%- if item.link -%}
+      <a href="{{ item.link }}" target="_blank">
         <i class="fas fa-solid fa-arrow-up-right-from-square" aria-hidden="true" title="link to publication"></i>
       </a>{%- endif -%}
     </div>
