--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -1,11 +1,8 @@
 {% for item in include.content %}
   <div class="row clearfix layout layout-left">
     <div class="col-xs-12 col-print-20 details">
-        <font size="3"><b>{{ item.first_author | strip | escape }}</b> {{ item.author_list | strip | escape }} <i>{{ item.title | strip | escape }}</i> {{ item.journal | strip | escape }} </font>  
-      {%- if item.link -%}
-      <a href="{{ item.link }}" target="_blank">
-        <i class="fas fa-solid fa-arrow-up-right-from-square" aria-hidden="true" title="link to publication"></i>
-      </a>{%- endif -%}
+        <font size="3"><b>{{ item.first_author | strip | escape }}</b> {{ item.author_list | strip | escape }} <i>{{ item.title | strip | escape }}</i> {{ item.journal | strip | escape }}       <a href="{{ item.link }}" target="_blank"><i class="fas fa-solid fa-arrow-up-right-from-square" aria-hidden="true" title="link to publication"></i></a>
+ </font>  
     </div>
   </div>
 {% endfor %}
