--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -5,7 +5,7 @@
         </div>
       <div class="col-xs-12 col-sm-7 col-md-6 col-print-12">
         {{ project.description | strip | markdownify }}
-        {% include a.html href=project.icon_url class="" %} <i class="{{ project.icon }}" title="{{ project.icon_title| escape }}"></i></a>
+        <a href="{{ project.icon_url }}" target="_blank"> <i class="{{ project.icon }}" title="{{ project.icon_title| escape }}"></i></a>
       </div>
     </div>
 {% endfor %}
