--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -4,8 +4,7 @@
         <span class="pub-img" style="background-image: url({{ project.image | relative_url }})"/>
         </div>
       <div class="col-xs-12 col-sm-7 col-md-6 col-print-12">
-        {{ project.description | strip | markdownify }}
-        <a href="{{ project.url }}" target="_blank"> <i class="fas fa-solid fa-arrow-up-right-from-square" aria-hidden="true" title="{{ project.icon_title| escape }}"></i></a>
+        {{ project.description | strip | markdownify }}<a href="{{ project.url }}" target="_blank"> <i class="fas fa-solid fa-arrow-up-right-from-square" title="{{ project.icon_title| escape }}"></i></a>
       </div>
     </div>
 {% endfor %}
