--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -1,5 +1,5 @@
 {% for item in include.content %}
-  <div class="row clearfix layout layout-left">
+  <div class="row clearfix layout layout-left" style="margin-bottom: 10px;">
     <div class="col-xs-12 col-print-20 details">
         <font size="3">{{ item.author_list | strip }} <i>{{ item.title | strip | escape }}</i> {{ item.journal | strip | escape }} <a href="{{ item.link }}" target="_blank"><i class="fas fa-solid fa-arrow-up-right-from-square" title="link to publication"></i></a></font>  
     </div>
