--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,13 +8,13 @@
   <meta name="robots" content="index, follow">
   <meta name="keywords" content="{{ site.meta_keyword1 }}, {{ site.meta_keyword2 }}, {{ site.meta_keyword3 }}">
   
-  <meta property="og:title" content="{{ site.name }}" />
-  <meta property="og:locale" content="en_US" />
-  <meta property="og:description" content="{{ site.meta_description }}" />
-  <meta property="og:url" content="https://{{ site.meta_url }}/" />
-  <meta property="og:site_name" content="{{ site.title }}" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="{{ site.meta_img }}" />
+  <meta property="og:title" content="{{ site.name }}">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:description" content="{{ site.meta_description }}">
+  <meta property="og:url" content="https://{{ site.meta_url }}/">
+  <meta property="og:site_name" content="{{ site.title }}">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="{{ site.meta_img }}">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="{{ site.meta_url }}">
@@ -23,7 +23,7 @@
   <meta name="twitter:description" content="{{ site.meta_description }}">
   <meta name="twitter:image" content="{{ site.meta_img }}">
 
-  <link rel="canonical" href="https://{{ site.meta_url }}/"/>
+  <link rel="canonical" href="https://{{ site.meta_url }}/">
 
   <script type="application/ld+json">
   {
