--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -1,7 +1,7 @@
 {% for project in include.content %}
     <div class="row clearfix project">
       <div class="col-xs-12 col-sm-5 col-md-6 no-print">
-        <span class="pub-img" style="background-image: url({{ project.image | relative_url }})"/>
+        <span class="pub-img" style="background-image: url({{ project.image | relative_url }})">
         </div>
       <div class="col-xs-12 col-sm-7 col-md-6 col-print-12">
         {{ project.description | strip | markdownify }}<a href="{{ project.url }}" target="_blank"> <i class="fas fa-solid fa-arrow-up-right-from-square" title="{{ project.icon_title| escape }}"></i></a>
