--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -1,7 +1,9 @@
 {% for project in include.content %}
-<div class="row clearfix project">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-print-12">
-        {{ project.description | strip | markdownify }}<a href="{{ project.url }}" target="_blank"> <i class="fas fa-solid fa-arrow-up-right-from-square" title="{{ project.icon_title| escape }}"></i></a>
+    <div class="row clearfix project">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-print-12">
+            {{ project.description | strip | markdownify }}
+            <a href="{{ project.url }}" target="_blank">{{ project.url }}</a>
+            <i class="fas fa-solid fa-arrow-up-right-from-square" title="{{ project.icon_title| escape }}"></i>
+        </div>
     </div>
-</div>
 {% endfor %}
