--- a/_includes/section-p.html
+++ b/_includes/section-p.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-print-12">
             {{ project.description | strip | markdownify }}
             <a href="{{ project.url }}" target="_blank">{{ project.url }}</a>
-            <i class="fas fa-solid fa-arrow-up-right-from-square" title="{{ project.icon_title| escape }}"></i>
+            <i class="fas fa-solid fa-arrow-up-right-from-square" title="{{ project.icon_title| escape }}" style="font-size: 1.2em;"></i>
         </div>
     </div>
 {% endfor %}
