--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,13 @@
             </a>
           </li>
         {%- endif -%}
+        {%- if site.in_username -%}
+          <li>
+            <a target="_blank" href="www.linkedin.com/in/{{ site.in_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
+              <i class="fas fa-brands fa-linkedin-in" title="LinkedIn"></i>
+            </a>
+          </li>
+        {%- endif -%}
         {%- if site.PDF -%}
           <li>
             <a target="_blank" href="https://{{ site.meta_url | escape }}{{ site.PDF | relative_url }}" class="button button--sacnite button--round-l">
