--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,17 +23,17 @@
             </a>
           </li>
         {%- endif -%}
-        {%- if site.github_username -%}
-          <li>
-            <a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
-              <i class="fas fa-brands fa-github" title="GitHub"></i>
-            </a>
-          </li>
-        {%- endif -%}
         {%- if site.in_username -%}
           <li>
             <a target="_blank" href="www.linkedin.com/in/{{ site.in_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
               <i class="fas fa-brands fa-linkedin-in" title="LinkedIn"></i>
+            </a>
+          </li>
+        {%- endif -%}
+        {%- if site.github_username -%}
+          <li>
+            <a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
+              <i class="fa-solid fa-code-commit" title="GitHub"></i>
             </a>
           </li>
         {%- endif -%}
