--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
         {%- if site.github_username -%}
           <li>
             <a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
-              <i class="fa-solid fa-code-commit" title="GitHub"></i>
+              <i class="fa-solid fa-code-merge" title="GitHub"></i>
             </a>
           </li>
         {%- endif -%}
