--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
         {%- endif -%}
         {%- if site.in_username -%}
           <li>
-            <a target="_blank" href="www.linkedin.com/in/{{ site.in_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
+            <a target="_blank" href="https://linkedin.com/in/{{ site.in_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
               <i class="fa-brands fa-linkedin-in" title="LinkedIn"></i>
             </a>
           </li>
