--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,8 @@
     "sameAs": [
       "https://orcid.org/{{ site.orcid_username | escape }}",
       "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}",
-      "https://github.com/{{ site.github_username| cgi_escape | escape }}"
+      "https://github.com/{{ site.github_username| cgi_escape | escape }}",
+      "https://linkedin.com/in/{{ site.in_username| cgi_escape | escape }}"
     ],
     "jobTitle": "{{ site.title }}"
   }
