--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,8 @@
       "https://orcid.org/{{ site.orcid_username | escape }}",
       "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}",
       "https://github.com/{{ site.github_username| cgi_escape | escape }}",
-      "https://linkedin.com/in/{{ site.in_username| cgi_escape | escape }}"
+      "https://linkedin.com/in/{{ site.in_username| cgi_escape | escape }}",
+      "https://x.com/{{ site.X_username| cgi_escape | escape }}"
     ],
     "jobTitle": "{{ site.title }}"
   }
