--- a/_includes/section-card.html
+++ b/_includes/section-card.html
@@ -16,7 +16,7 @@
           <p class="no-print aditional-links">
             {% for link in item.additional_links %}
               {% include a.html href=link.url class="" %}
-                <i class="fas fa-solid fa-arrow-up-right-from-square" title="{{ link.title | escape }}" style="font-size: 0.7em;"> {{ link.title | escape }}</i>
+                <i class="fas fa-solid fa-arrow-up-right-from-square" title="{{ link.title | escape }}" style="font-size: 0.7em; text-transform: none;"> {{ link.title | escape }}</i>
               </a>
             {% endfor %}
           </p>
