--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,10 @@
 <div class="container intro-container">
   <div class="row clearfix">
-    <div class="{{ 'col-xs-12 ' }}">
-        <i style="font-size: 12px;">(Last Update: {{ site.last_update }})</i>
-      {{ site.about_content | strip | markdownify }}
+    <div class="col-xs-12">
+      <i style="font-size: 12px;">(Last Update: {{ site.last_update }})</i>
+      <div style="font-size: 14px;">
+        {{ site.about_content | strip | markdownify }}
+      </div>
     </div>
   </div>
 </div>
