--- a/_includes/section-cert.html
+++ b/_includes/section-cert.html
@@ -12,7 +12,7 @@
           <ul class="additional-links">
             {% for link in item.additional_links %}
             <li style="list-style-type: none;">
-              <a href="{{ link.url }}" title="{{ link.title }}">
+              <a href="{{ link.url }}" target="_blank" title="{{ link.title }}">
                 <i class="fas fa-external-link-alt"></i> {{ link.title }}
               </a>
             </li>
