--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="container footer-container">
   <p>
     {{ site.name | escape }} -
-    <a href="mailto:{{ site.email }}" target="_blank">{{ site.email | escape }}</a>
+    <a title="Email" href="mailto:{{ site.email }}" target="_blank">{{ site.email | escape }}</a>
   </p>
 </div>
