--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,13 +16,6 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="{{ site.meta_img }}">
 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="{{ site.meta_url }}">
-  <meta property="twitter:url" content="https://{{ site.meta_url }}/">
-  <meta name="twitter:title" content="{{ site.name }}">
-  <meta name="twitter:description" content="{{ site.meta_description }}">
-  <meta name="twitter:image" content="{{ site.meta_img }}">
-
   <link rel="canonical" href="https://{{ site.meta_url }}/">
 
   <script type="application/ld+json">
@@ -42,7 +35,7 @@
   }
   </script>
 
-  <title>{{ site.name }} | {{ site.title }}</title>
+  <title>{{ site.name }}</title>
 
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   <link rel="apple-touch-icon" sizes="76x76" href="{{ '/apple-touch-icon.png' | relative_url }}">
