--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:type" content="website">
   <meta property="og:image" content="{{ site.meta_img }}">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 
   <link rel="canonical" href="https://{{ site.meta_url }}/">
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
