--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
     "@type": "Person",
     "name": "{{ site.name }}",
     "url": "https://{{ site.meta_url }}/",
-    "image": "{{ site.meta_img }}/",
+    "image": "{{ site.meta_img }}",
     "sameAs": [
       "https://orcid.org/{{ site.orcid_username | escape }}/",
       "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}/",
