--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,11 +38,11 @@
     "email": "{{ site.email }}",
     "lastUpdate": "{{ site.last_update }}",
     "keywords": [
-    "site.meta_keyword1",
-    "site.meta_keyword2",
-    "site.meta_keyword3",
-    "site.meta_keyword4",
-    "site.meta_keyword5"
+    "{{site.meta_keyword1}}",
+    "{{site.meta_keyword2}}",
+    "{{site.meta_keyword3}}",
+    "{{site.meta_keyword4}}",
+    "{{site.meta_keyword5}}"
     ]
   }
   </script>
