--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,23 +16,23 @@
             </a>
           </li>
         {%- endif -%}
-        {%- if site.medium_username -%}
+        {%- if site.googlescholar_username -%}
           <li>
-            <a title="Medium" target="_blank" href="https://medium.com/@{{ site.medium_username| escape }}" class="button button--sacnite button--round-l">
-              <i class="fa-brands fa-medium" title="Medium"></i>
+            <a title="GoogleScholar" target="_blank" href="https://scholar.google.com/citations?user={{ site.googlescholar_username | escape }}/" class="button button--sacnite button--round-l">
+              <i class="fa-brands fa-google-scholar" title="GoogleScholar"></i>
             </a>
           </li>
         {%- endif -%}
         {%- if site.in_username -%}
           <li>
-            <a title="LinkedIn" target="_blank" href="https://linkedin.com/in/{{ site.in_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
+            <a title="LinkedIn" target="_blank" href="https://linkedin.com/in/{{ site.in_username| cgi_escape | escape }}/" class="button button--sacnite button--round-l">
               <i class="fa-brands fa-linkedin-in" title="LinkedIn"></i>
             </a>
           </li>
         {%- endif -%}
         {%- if site.github_username -%}
           <li>
-            <a title="GitHub" target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
+            <a title="GitHub" target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}/" class="button button--sacnite button--round-l">
               <i class="fa-brands fa-github" title="GitHub"></i>
             </a>
           </li> 
