--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
         {%- endif -%}
         {%- if site.googlescholar_username -%}
           <li>
-            <a title="GoogleScholar" target="_blank" href="https://scholar.google.com/citations?user={{ site.googlescholar_username | escape }}/" class="button button--sacnite button--round-l">
+            <a title="GoogleScholar" target="_blank" href="https://scholar.google.com/citations?user={{ site.googlescholar_username | escape }}" class="button button--sacnite button--round-l">
               <i class="fa-brands fa-google-scholar" title="GoogleScholar"></i>
             </a>
           </li>
