--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -7,7 +7,7 @@
       <span class="journal" style="font-size: 16px;">{{ item.journal | strip }} &nbsp;</span>
       {% if item.link %}
       <a href="{{ item.link }}" class="external-link" target="_blank" title="Link to publication">
-        <i class="fas fa-external-link-alt"></i>
+        <i class="fas fa-link"></i>
       </a>
       {% endif %}
     </div>
